# phone_book

./: Makefile  README.md  cli.py  pyproject.toml  readme.md  task.md
phone_book/: cli.py
phone_book/phones/: phones.json
phone_book/scripts/: formatter.py  get_phones.py  phone_book.py
scripts/: phone_book.py
